---------------------------------------------------------------------------------------------------
Version: 1.18.0
Date: ????-??-??

  Features:
    - Boss mode support

  Changes:
    - Refactored Level Strength Multiplier.
    - Reduced spawn rate for drones.

---------------------------------------------------------------------------------------------------
Version: 1.17.0
Date: 2022-11-15

  Graphics:
    - Updated graphics. Sprites no longer have unintended holes and black borders!!!
    - Changed map color of the race to orange.

  Changes:
    - Normal range sunker and spore colony now have double HP. Level 1 and Short range (spawned by drones) are not unaffected.

  Bugfixes:
    - Removed short range sunker colony from autoplace

---------------------------------------------------------------------------------------------------
Version: 1.16.2
Date: 2022-07-10

  Changes:
    - Improve unit performance by changing enemies distraction_cooldown from 20 to 300.

---------------------------------------------------------------------------------------------------
Version: 1.16.1
Date: 2022-06-22

  Changes:
    - Added support to set neutral for neutral forces that created from other mods.
    - changed {'mutalisk', 'queen'} spawn ratio from {3,1} to {8,1}
    - changed {'mutalisk', 'overlord'} spawn ratio from {2,1} to {5,1}
    - changed {'zergling','ultralisk','defiler'} spawn ratio from {4,2,1} to {6,3,1}
    - changed {'zergling', 'hydralisk','lurker', 'ultralisk'} spawn ratio from {2,1,1,1} to {4,2,1,1}

---------------------------------------------------------------------------------------------------
Version: 1.16.0
Date: 2022-06-06

  Features:
    - Added support for featured squad
    - Added support for elite squad
    - -- Featured Squad Details ---
    - Unit list, spawn ratio, unit attack point cost per unit
    - {{'zergling','ultralisk'}, {3, 1}, 20},
    - {{'hydralisk','lurker'}, {2, 1}, 20},