@@ -36,6 +36,7 @@ erm_zerg/spore_colony_shortrange=Short Range Spore Colony L__1__
 erm_zerg/sunker_colony=Sunker Colony L__1__
 erm_zerg/sunker_colony_shortrange=Short Range Sunker Colony L__1__
 #Attacks
-acid-cloud=Acid Cloud
+acid-cloud=Snare
 blood-cloud=Blood Erosion
-purple-fire=Errosive Puke
+purple-fire=Erosive Puke
+dark-swarm=Dark Swarm
