@@ -202,6 +202,23 @@ data:extend({
     },
     {
         type = "explosion",
+        name = "dark-swarm-explosion",
+        flags = { "not-on-map" },
+        animations = {
+            {
+                filename = "__erm_zerg__/graphics/entity/projectiles/darkswarm.png",
+                priority = "extra-high",
+                width = 256,
+                height = 256,
+                frame_count = 27,
+                frame_sequence = {1,2,3,4,5,6,7,8,9,10,9,8,7,6,7,8,9,10,9,8,7,6,5,4,3,2,1},
+                animation_speed = 0.2,
+                scale = 2
+            }
+        }
+    },
+    {
+        type = "explosion",
         name = "acid-cloud-explosion",
         flags = { "not-on-map" },
         animations = {
