@@ -4,6 +4,8 @@ Date: ????-??-??
 
   Features:
     - Boss mode support
+    - Defiler can cast dark swarm.  Heals zerg units 600 health / sec for 3 seconds.
+    - Defiler has 10% to cast nothing.  Each cast has 25% chance to cast Dark Swamp and 90% chance to cast Blood Erosion.
 
   Changes:
     - Refactored Level Strength Multiplier.
